--- a/reviews/package.json
+++ b/reviews/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "FEC_yelp_main",
-  "version": "1.0.0",
+  "name": "yelp-reviews",
+  "version": "",
   "description": "",
   "author": "",
   "license": "",
-  "main": "index.js",
   "engines": {
     "node": ">=6.13.0"
   },
   "scripts": {
     "test": "jest",
-    "start-main": "nodemon ./server/index.js",
-    "start-reviews": "nodemon ./reviews/server/index.js"
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --colors --watchAll=false",
+    "server-dev": "nodemon server/index.js",
+    "react-dev": "webpack -d --watch",
+    "start": "live-server",
+    "seeding": "mysql -u student -p < schema.sql"
   },
   "dependencies": {
     "axios": "^0.19.2",
@@ -22,9 +25,11 @@
     "mysql": "^2.18.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-paginate": "^6.3.2",
     "react-test-renderer": "^16.13.1",
     "request": "^2.88.2",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "underscore": "^1.10.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
