--- a/reviews/package.json
+++ b/reviews/package.json
@@ -13,6 +13,7 @@
     "test:coverage": "jest --coverage --colors --watchAll=false",
     "server-dev": "nodemon server/index.js",
     "react-dev": "webpack -d --watch",
+    "react-prod": "webpack -p",
     "start": "live-server",
     "seeding": "mysql -u student -pstudent < schema.sql"
   },
@@ -41,6 +42,7 @@
     "babel-eslint": "^9.0.0",
     "babel-jest": "^25.5.1",
     "babel-loader": "^8.1.0",
+    "babel-plugin-styled-components": "^1.10.7",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
